fix: alignment

--- a/src/app/component/raw-data/raw-data.component.css
+++ b/src/app/component/raw-data/raw-data.component.css
@@ -45,7 +45,7 @@
 .input-search {
   width: 15rem;
   border: 1px solid #d2d1d1ba;
-  padding: 0.5rem;
+  padding: 0;
   margin-right: 0.5rem;
 }
 
